--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -19,8 +19,7 @@ jobs:
         python-version: [ '3.8' ]
     steps:
       - name: Check Auth
-        #if: github.event_name == 'workflow_dispatch' && github.actor != 'ricardojosegomezulmke'
-        if: github.event_name == 'workflow_dispatch' && github.actor != 'mynecker'
+        if: github.event_name == 'workflow_dispatch' && github.actor != 'ricardojosegomezulmke' && github.actor != 'mynecker'
         run: |
           echo "not authorized"
           echo '::set-output name=IS_AUTHORIZED::false'
